--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,14 +1,44 @@
-
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
-
 // Variables
 @import 'variables';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-.navbar-laravel {
+body{
+  font-family: Helvetica, "Microsoft YaHei", Arial, sans-serif;
+  font-size: 14px;
+}
+.navbar-static-top{
+  border-color: #eee;
   background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+  box-shadow: 0px 1px 11px 2px rgba(42,42,42,0.1);
+  border-top: 4px solid #a8cdf7;
+  border-bottom: 1px solid #eee;
+  margin-bottom: 40px;
+  margin-top: 0px;
+}
+html{
+  position: relative;
+  min-height: 100%;
+}
+body{
+  margin-bottom: 60px;
+}
+.footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #000;
+  .contatiner{
+    padding-right: 15px;
+    padding-left: 15px;
+    p{
+      margin:19px 0;
+      color: #ccc;
+      a{
+        color: inherit
+      }
+    }
+  }
 }
