--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,6 +4,12 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/regular';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/brands';
+
 body{
   font-family: Helvetica, "Microsoft YaHei", Arial, sans-serif;
   font-size: 14px;
@@ -37,7 +43,7 @@ body{
       margin:19px 0;
       color: #ccc;
       a{
-        color: inherit
+        color: inherit;
       }
     }
   }
