--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -50,7 +50,7 @@ body{
 }
 
 
-.topics-index-page {
+.topics-index-page, .categories-show-page{
   .topic-list {
     .nav>li>a {
       position: relative;
